Add http client service and menu modules

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,3 +16,11 @@
 a {
   text-decoration: none;
 }
+
+::ng-deep .p-drawer {
+  margin-top: 48px !important;
+}
+
+.active-menu {
+  background-color: red !important;
+}
