Add support to set current user state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
               </div>
               <ul class="list-none p-0 m-0 overflow-hidden">
                 <li
-                  [ngClass]="{ 'active-menu': '' }"
+                  [ngClass]="{ 'active-menu': currentMenuId() === 'home' }"
                   (click)="onChangeRoute($event, 'home')"
                 >
                   <a
@@ -36,7 +36,10 @@
                     <span class="font-medium">Home</span>
                   </a>
                 </li>
-                <li (click)="onChangeRoute($event, 'dashboard')">
+                <li
+                  (click)="onChangeRoute($event, 'dashboard')"
+                  [ngClass]="{ 'active-menu': currentMenuId() === 'dashboard' }"
+                >
                   <a
                     pRipple
                     class="flex items-center cursor-pointer p-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
@@ -62,7 +65,10 @@
                   <ul
                     class="list-none py-0 pl-4 pr-0 m-0 hidden overflow-y-hidden transition-all duration-[400ms] ease-in-out"
                   >
-                    <li (click)="onChangeRoute($event, '/staff')">
+                    <li
+                      (click)="onChangeRoute($event, 'staff')"
+                      [ngClass]="{ 'active-menu': currentMenuId() === 'staff' }"
+                    >
                       <a
                         pRipple
                         class="flex items-center cursor-pointer p-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
@@ -71,7 +77,12 @@
                         <span class="font-medium">List</span>
                       </a>
                     </li>
-                    <li (click)="onChangeRoute($event, '/staff/new')">
+                    <li
+                      (click)="onChangeRoute($event, 'staff/new')"
+                      [ngClass]="{
+                        'active-menu': currentMenuId() === 'staff/new'
+                      }"
+                    >
                       <a
                         pRipple
                         class="flex items-center cursor-pointer p-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
@@ -284,16 +295,18 @@
           </ul>
         </div>
         <div class="mt-auto">
-          <hr class="mb-4 mx-4 border-t border-0 border-surface" />
+          <hr class="mb-0 border-t border-0 border-surface" />
           <a
             pRipple
-            class="m-4 flex items-center cursor-pointer p-2 gap-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
+            class="mb-5 ml-4 mr-4 flex items-center cursor-pointer p-2 gap-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
           >
             <!-- <p-avatar
             image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
             shape="circle"
           /> -->
-            <span class="font-bold">Josephat Mwakyusa</span>
+            <span class="font-bold">{{
+              currentUserState.currentUser()?.displayName
+            }}</span>
           </a>
         </div>
       </div>
@@ -305,8 +318,9 @@
     [ngStyle]="{ 'margin-left': visible ? '13rem' : '0' }"
   >
     <p-button size="small" (click)="visible = !visible" icon="pi pi-bars" />
+    <span>
+      {{ currentMenuId() }}
+    </span>
     <router-outlet />
-
-    <p-button severity="primary" label="Testing button" />
   </div>
 </div>
