--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,5 +22,6 @@ a {
 }
 
 .active-menu {
-  background-color: red !important;
+  background-color: #52a4f53d !important;
+  color: #fff !important;
 }
