--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
 <p>home works!</p>
+
+<div
+  class="flex justify-center"
+  animationDuration=".5s"
+  *ngIf="currentUser() === null"
+>
+  <p-progress-spinner co ariaLabel="loading" />
+</div>
+
+{{ currentUser() | json }}
