--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,3 @@
-<p>home works!</p>
-
 <div
   class="flex justify-center"
   animationDuration=".5s"
@@ -8,4 +6,6 @@
   <p-progress-spinner co ariaLabel="loading" />
 </div>
 
-{{ currentUser() | json }}
+<div class="mt-3">
+  <app-staff-profile *ngIf="currentUser()"></app-staff-profile>
+</div>
