--- a/src/app/pages/staff-management/staff-management.component.html
+++ b/src/app/pages/staff-management/staff-management.component.html
@@ -1,1 +1,13 @@
-<p>staff-management works!</p>
+<!-- <p>staff-management works!</p> -->
+<div class="p-3">
+  <div class="h5 text-muted mt-3">Staff profile management</div>
+  <div class="mt-4" *ngIf="currentUser() !== null">
+    <div class="form-container mt-4 p-4">
+      <ngx-form
+        [formFields]="formFields()"
+        (formData)="onGetFormData($event)"
+        [responsivenessClass]="'col-md-6'"
+      />
+    </div>
+  </div>
+</div>
