--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,3 +25,7 @@ a {
   background-color: #52a4f53d !important;
   color: #fff !important;
 }
+
+.menu-nav-button:hover {
+  background-color: #fff !important;
+}
