--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,14 @@
-<p>dashboard works!</p>
+<div
+  class="flex justify-center"
+  animationDuration=".5s"
+  *ngIf="dashboards().length == 0"
+>
+  <p-progress-spinner co ariaLabel="loading" />
+</div>
 
-{{ currentUser() | json }}
+<app-dashboard-container
+  *ngIf="dashboards() && dashboards().length > 0"
+  [dashboards]="dashboards()"
+></app-dashboard-container>
+
+<!-- {{ currentUser() | json }} -->
