--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ html {
   font-size: 14px;
 }
 
+body {
+  background-color: #eeeeee3b !important;
+}
+
 :root {
   --body-bg: var(--p-surface-50);
   --body-text-color: var(--p-surface-900);
