Add support to manage basic project details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,6 +67,7 @@
     [ngStyle]="{ 'margin-left': visible ? '14rem' : '0' }"
   >
     <p-button
+      class="custom-css-btn"
       size="small"
       variant="text"
       severity="secondary"
