--- a/src/app/shared/components/ngx-form/ngx-form.component.scss
+++ b/src/app/shared/components/ngx-form/ngx-form.component.scss
@@ -7,6 +7,9 @@
 ::ng-deep .p-select {
   padding: 3px !important;
   width: 100% !important;
+}
+
+::ng-deep .p-textarea {
   border-radius: 0px !important;
 }
 
