--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,4 +28,11 @@ a {
 
 .menu-nav-button:hover {
   background-color: #fff !important;
+  border: solid 1px #eee !important;
+}
+
+::ng-deep .custom-css-btn .p-button {
+  background-color: #fff !important;
+  border: solid 1px #eeeeee4a !important;
+  border-radius: 0 !important;
 }
