--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,76 @@
-<p>projects works!</p>
+<div class="mt-2 p-3 projects-container">
+  <div
+    class="flex justify-center"
+    animationDuration=".5s"
+    *ngIf="currentUser() === null"
+  >
+    <p-progress-spinner co ariaLabel="loading" />
+  </div>
+  <div class="row" *ngIf="currentUser()">
+    <div class="col-md-8 col-sm-12 col-sx-12">
+      <div class="h4 p-1 text-muted">Our Projects</div>
+    </div>
+    <div class="col-md-4 col-sm-12 col-sx-12 d-flex justify-content-end">
+      <p-button
+        severity="secondary"
+        variant="text"
+        icon="pi pi-plus"
+        label="Project"
+        (onClick)="onChangeRoute($event, 'projects/new')"
+      />
+    </div>
+    <div
+      class="col-md-6 col-sm-12 col-sx-12"
+      *ngFor="let project of projectsPayload()?.trackedEntities"
+    >
+      <p-panel>
+        <ng-template #header>
+          <div class="flex items-center gap-2">
+            <!-- <p-avatar
+              image="https://primefaces.org/cdn/primevue/images/avatar/amyelsner.png"
+              shape="circle"
+            /> -->
+            <span class="font-bold">{{
+              project?.keyedAttributeValues["NAME"]?.value
+            }}</span>
+          </div>
+        </ng-template>
+        <ng-template #footer>
+          <div class="flex flex-wrap items-center justify-between gap-4">
+            <div class="flex items-center gap-2">
+              <p-button icon="pi pi-user" rounded text></p-button>
+              <p-button
+                icon="pi pi-bookmark"
+                severity="secondary"
+                rounded
+                text
+              ></p-button>
+            </div>
+            <span class="text-surface-500 dark:text-surface-400">{{
+              project?.lastUpdatedText
+            }}</span>
+          </div>
+        </ng-template>
+        <ng-template #icons>
+          <p-button
+            icon="pi pi-cog"
+            severity="secondary"
+            rounded
+            text
+            (click)="menu.toggle($event)"
+          />
+          <p-menu
+            #menu
+            [id]="project?.id"
+            [model]="project?.menuItems"
+            [popup]="true"
+            appendTo="body"
+          />
+        </ng-template>
+        <p class="m-0">
+          {{ project?.keyedAttributeValues["DESCRIPTION"]?.value }}
+        </p>
+      </p-panel>
+    </div>
+  </div>
+</div>
